[package]
name = "sitetrace-axum"
keywords = ["http", "web", "tracing", "analyze"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Axum client (middleware) for integrating with sitetrace service"
readme = "../README.md"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ghashy/sitetrace-integrations"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "tracing"] }
async-trait = "0.1.83"
axum-core = { version = "0.4" }
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.117"
tower = { version = "0.5.1", features = ["timeout"] }
futures = "0.3.31"
time = { version = "0.3.36", features = [ "macros", "parsing", "formatting", "serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
url = { version = "2.5.2", features = ["serde"] }
thiserror = "1.0.61"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.8", default-features = false, features = [
  "json",
  "default-tls",
] }
tracing = "0.1.40"
tower-cookies = "0.10.0"
regex = "1.11.0"
garde = { version = "0.20.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }

[dev-dependencies]
tower-sessions = "0.13.0"
tokio = { version = "1.40.0", features = [
  "macros",
  "rt-multi-thread",
  "signal"
] }
