[package]
name = "sitetrace-axum"
keywords = ["http", "web", "tracing", "analyze"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "Axum client (middleware) for integrating with sitetrace service"
readme = "../README.md"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ghashy/sitetrace-integrations"
license = "Apache-2.0"

[dependencies]
async-io = "2.4.0"
axum = { version = "0.7.9", features = ["macros", "tracing"] }
async-trait = "0.1.83"
axum-core = { version = "0.4" }
http = "1.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower = { version = "0.5.1", features = ["timeout"] }
futures = "0.3.31"
time = { version = "0.3.37", features = [ "macros", "parsing", "formatting", "serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
thiserror = "2.0.4"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "json",
  "default-tls",
] }
tracing = "0.1.41"
tower-cookies = "0.10.0"
regex = "1.11.1"
garde = { version = "0.20.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "registry",
  "env-filter",
] }
rand = "0.8.5"

[dev-dependencies]
tower-sessions = "0.13.0"
tokio = { version = "1.42.0", features = [
  "macros",
  "rt-multi-thread",
  "signal"
] }
